# Blog-app-Django

./: .dockerignore  .env-example  .env.example  .gitignore  ARCHITECTURE_REVIEW.md  README.md  Untitled Diagram.drawio  dockerfile  manage.py  pyproject.toml  requirements.txt
configuration/: api.py  settings.py  urls.py
core/: api.py  urls.py  views.py
django_project/accounts/: admin.py  forms.py  models.py
django_project/accounts/migrations/: 0001_initial.py
django_project/django_project/: settings.py  urls.py
django_project/posts/: models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
django_project/posts/migrations/: 0001_initial.py
docmanage/: api.py  apps.py  models.py  utils.py
docmanage/migrations/: 0001_initial.py
user/: api.py  models.py  schemas.py  urls.py
user/migrations/: 0001_initial.py
